--- a/HTML_Page.html
+++ b/HTML_Page.html
@@ -1,19 +1,22 @@
 <h1>Elena's Chat Challenge</h1> 
 <h3>Type your message in the box, and click "submit".</h3>
 
-<fieldset>
+<!--creating a form that will store the information in a google drive page -->
+<form action="http://bit.ly/VYsqJF" method="post">
+  <fieldset>
     <legend>Simple Text Chat</legend>
     <textarea type="text" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="50" spellcheck="true" maxlength="250"></textarea>
     <div>
         <input type="submit" value="Submit" class="button" />
     </div>
-</fieldset>
+  </fieldset>
+</form>
 <!--/* the result of the search will be rendered inside this div -->
 <div id="result">
-    <ul>
-        <li class="messages"></li>
-        <li class="messages"></li>
-        <li class="messages"></li>
-        <li class="messages"></li>
-    </ul>
+  <ul>
+    <li class="messages"></li>
+    <li class="messages"></li>
+    <li class="messages"></li>
+    <li class="messages"></li>
+  </ul>
 </div>
