--- a/HTML_Page.html
+++ b/HTML_Page.html
@@ -1,22 +1,14 @@
-<h1>Elena's Chat Challenge</h1> 
-<h3>Type your message in the box, and click "submit".</h3>
+<h1>Elena's Chat Challenge</h1>
+<h3>Type your message in the box, and click Submit.</h3>
+<h6>Note: messages are limited to 250 characters</h6>
 
-<!--creating a form that will store the information in a google drive page -->
-<form action="http://bit.ly/VYsqJF" method="post">
-  <fieldset>
+<form action="https://docs.google.com/forms/d/1s4a2tQb65fAA5cyJFiXszxyuNtOzNAeNn7Agcge7_Vc/formResponse" method="post"></form>
+<fieldset>
     <legend>Simple Text Chat</legend>
     <textarea type="text" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="50" spellcheck="true" maxlength="250"></textarea>
     <div>
         <input type="submit" value="Submit" class="button" />
     </div>
-  </fieldset>
-</form>
+</fieldset>
 <!--/* the result of the search will be rendered inside this div -->
-<div id="result">
-  <ul>
-    <li class="messages"></li>
-    <li class="messages"></li>
-    <li class="messages"></li>
-    <li class="messages"></li>
-  </ul>
-</div>
+<div id="result"></div>
