--- a/HTML_Page.html
+++ b/HTML_Page.html
@@ -3,30 +3,30 @@
 <head>
 	<title>Elena Newton Chat Challenge</title>
 	<link type="stylesheet/css" src="chat_challenge_CSS.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="http://codeclasschat.herokuapp.com/helpers.js"></script>
 </head>
 <body>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="http://codeclasschat.herokuapp.com/helpers.js"></script>
+<form id="chatForm" action="/Users/ea0723/Documents/projects/Chat_Challenge/local_msg_srv.txt" method="post">
 <h1>Elena's Chat Challenge</h1> 
 <h3>Type your message in the box, and click Submit.</h3>
-
-<form id="chatForm" action="/Users/ea0723/Documents/projects/Chat_Challenge/local_msg_srv.txt" method="post"></form>
 <fieldset>
     <legend>Simple Text Chat</legend>
-    <textarea type="text" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="50" spellcheck="true"></textarea>
-    <div>
-        <input type="submit" value="Submit" class="button" />
-    </div>
+    <textarea type="text" id="message" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="50" spellcheck="true"></textarea>
+    <div><input type="submit" value="Submit" class="button" /></div>
 </fieldset>
-<!--/* the result of the search will be rendered inside this div -->
+<!--the result of the search will be rendered inside this div -->
 <div id="result"></div>
+</form>
 </body>
 
 
 <!--
 First: set up a form to capture message (form: "chatForm", html element: "textarea", name: "message") (done)
-Next: add text from message field to line 1 of local_msg_srv.txt using helpers.sendMessage(messageText). mark message as "new"
+Next: add text from message field to line 1 of local_msg_srv.txt using helpers.sendMessage(messageText). 
+	Step 2: mark message as "new"
 Next: go to local_msg_srv.txt and find any "new" messages using helpers.fetchNewMessages(callback)
 Next: go to local_msg_srv.txt and pull any messages marked as "new"  
-Last: display in div: #results using helpers.renderMessage(messageText). mark message as rendered in local_msg_srv.txt.
+Last: display in div: #results using helpers.renderMessage(messageText). 
+	Step 2: mark message as "rendered" in local_msg_srv.txt.
 -->
