updating - with js link this time :)

--- a/HTML_Page.html
+++ b/HTML_Page.html
@@ -4,7 +4,8 @@
 	<title>Elena Newton Chat Challenge</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="http://codeclasschat.herokuapp.com/helpers.js"></script>
-	<link rel='stylesheet' type='text/css' href="chat_challenge_CSS.css" />
+	<script type="text/javascript" href="chat_challenge.js"></script>
+	<link rel='stylesheet' type='text/css' href="chat_challenge_CSS.css"/>
 </head>
 <body>
 	<form id="chatForm" action="/Users/ea0723/Documents/projects/Chat_Challenge/local_msg_srv.txt" method="post">
