updated form on html; results section no longer resets at each submit

--- a/Chat_final_html.html
+++ b/Chat_final_html.html
@@ -1,67 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
-	<title>Elena Newton Chat Challenge</title>
-	<link rel='stylesheet' type='text/css' href="chat_challenge_CSS.css"/>
-</head>
-<body>
-	<form id="chatForm" method="post">
-		<h1>Elena Newton</h1> 
-		<h3>HackReactor Challenge - Simple Chat</h3>
-		<fieldset>
-			<legend>Type Your Message, Click Submit</legend>
-			<textarea type="text" class="newMessage" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="100" spellcheck="true"></textarea>
-			<div><input type="submit" value="Submit" class="button"/></div>
-			<!--the result of the search will be rendered inside this div -->
-			<div class="messages" name="messages"></div>
-		</fieldset>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script src="http://codeclasschat.herokuapp.com/helpers.js"></script>
-	<script>
-	$(document).ready(function(){
-	    $(".button").click(function (e) { //click submit button to initiate send message
-			helpers.sendMessage($('.newMessage').val()); //helper js that pulls textarea text
-			$('.newMessage').val(""); //returns textarea value to blank after submit
-  	    });
-			
-		function fetch(){ //create a named function for easier reading of setInterval code
-            helpers.fetchNewMessages(function (messages) { //helper js pulls new msgs from srv
-              $.each(messages, function (i, message) { //
-                helpers.renderMessage(message);}); //renders new messages fetched from srv onto pg
-			});
-		};
-		
-		function warning(){ //insert a message into results - to make setInterval easier to read
-			$('.messages').prepend('<li>Clearing message history in 5 Seconds</li>');
-		};
-		
-		function clear(){ //empty the 'results' section (removes history every 30 seconds)
-			$('.messages').empty();
-		};
-		
-		setInterval(fetch, 5000); //adjust fetch timing
-		setInterval(warning, 55000) //adjust warning timing
-		setInterval(clear, 60000); //adjust clear timing
-		
-	});
-		
-	</script>
-		
-	</form>
-</body>
+    
+    <head>
+        <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
+        <title>Elena Newton Chat Challenge</title>
+        <link rel='stylesheet' type='text/css' href="chat_challenge_CSS.css" />
+    </head>
+    
+    <body>
+        <fieldset>
+            <form id="chatForm" method="post">
+                	<h1>Elena Newton</h1> 
+                	<h3>HackReactor Challenge - Simple Chat</h3>
 
+                <legend>Type Your Message, Click Submit</legend>
+                <textarea type="text" class="newMessage" name="message" title="Message" Placeholder="Your message here..." rows="2" cols="50" spellcheck="true"></textarea>
+            </form>
+            <div>
+                <input type="submit" value="Submit" class="button" />
+            </div>
+            <!--the result of the search will be rendered inside this div -->
+            <div class="messages" name="messages"></div>
+        </fieldset>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="http://codeclasschat.herokuapp.com/helpers.js"></script>
+        <script>
+            $(document).ready(function () {
+                $('.button').click(function (e) { //click submit button to initiate send message
+                    var myMessage = $('.newMessage').val();
+                    helpers.sendMessage(myMessage); //helper js that pulls textarea text
+                    $('.newMessage').val(""); //returns textarea value to blank after submit
+                });
 
-<!--
-First: set up a form to capture message (form: "chatForm", html element: "textarea", name: "message") (done)
-Next: add text from message field to line 1 of local_msg_srv.txt using helpers.sendMessage(messageText). 
-	Step 2: mark message as "new"
-Next: go to local_msg_srv.txt and find any "new" messages using helpers.fetchNewMessages(callback)
-Next: go to local_msg_srv.txt and pull any messages marked as "new"  
-Last: display in div: #results using helpers.renderMessage(messageText). 
-	Step 2: mark message as "rendered" in local_msg_srv.txt.
-	
-	$('#chatForm').submit(sendMessage('#message') {
-	
--->
+                function fetch() { //create a named function for easier reading of setInterval code
+                    helpers.fetchNewMessages(function (messages) { //helper js pulls new msgs from srv
+                        $.each(messages, function (i, message) { //
+                            helpers.renderMessage(message);
+                        }); //renders new messages fetched from srv onto pg
+                    });
+                };
+
+                function warning() { //insert a message into results - to make setInterval easier to read
+                    $('.messages').prepend('<li>Clearing message history in 5 Seconds</li>');
+                };
+
+                function clear() { //empty the 'results' section (removes history every 30 seconds)
+                    $('.messages').empty();
+                };
+
+                setInterval(fetch, 2000); //adjust fetch timing
+
+            });
+        </script>
+    </body>
+
 </html>
